web/styles/subscriptions.css
/* ... */
.two-pane-settings-container .two-pane-settings-subheader {
    display: flex;
    align-items: center;
    border-bottom: 1px solid var(--color-border-modal-bar);
    grid-area: settings-overlay-subheader;
    justify-content: center;

    .list-toggler-container {
        flex-wrap: wrap;
        padding: 8px;
        display: flex;
        justify-content: end;
        flex-grow: 1;
        gap: 5px;
        align-self: start;
    }

    .tab-switcher.stream_sorter_toggle {
        margin-left: auto;
    }

    .tab-switcher,
    #add_new_subscription {
        margin: 0;
        height: var(--settings-overlay-header-button-height);
    }

    .display-type {
        display: flex;
        justify-content: center;
        align-items: center;
        font-weight: 600;
        padding: 10px;
        overflow: hidden;
        width: 100%;

        & a {
            color: inherit;

            &:hover {
                color: inherit;
                text-decoration: none;
            }
        }

        &.preview::after {
            content: "Preview";
        }

        &.preferences::after {
            content: "Preferences";
        }

        .stream-info-title {
            display: flex;
            justify-content: center;
        }

        .user-group-info-title {
            display: block;
            text-align: center;
            text-overflow: ellipsis;
            white-space: nowrap;
        }

        .stream-info-title,
        .user-group-info-title {
            font-size: 1.5em; /* 21px at 14px/em */
            line-height: 1.25;
            font-weight: 600;
            overflow-wrap: break-word;
            overflow: hidden;
            width: 100%;

            &.new-channel-members-title {
                line-clamp: 2;
                display: -webkit-box;
                -webkit-line-clamp: 2;
                -webkit-box-orient: vertical;
                width: unset;
            }

            /* The right pane header/title for user group and channel setting menu has
               two major components, The group/channel name section and the button groups. */
            .selected-group-title,
            .selected-stream-title {
                display: flex;
                width: 100%;

                /* This works in tandem with ".small-window-alert-notification-container"
                   in the right pane body. */
                .large-window-alert-notification-container {
                    display: flex;

                    @media (width < $sm_min) {
                        display: none;
                    }

                    .stream_change_property_info {
                        margin-right: 1px;
                        font-weight: 400;
                        font-size: var(--base-font-size-px);
                        min-width: max-content;
                    }
                }

                .selected-stream,
                .selected-group {
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                }

                /* These contain two button groups, the left group should stick to the
                   right side of the group/channel title name, and the right group that
                   should stick to the rightmost side of the right pane header. */
                .selected-group-buttons,
                .stream-title-buttons {
                    display: flex;
                    justify-content: space-between;
                    /* Make the button groups stretch and take the rest of the right pane
                       header */
                    flex-grow: 1;
                }

                .button-group {
                    height: 1.25em;
                    display: flex;

                    .subscribe-button,
                    .join_leave_button,
                    #preview-stream-button {
                        height: 100%;
                        margin-left: 3px;
                    }

                    .icon-button {
                        /* Equal to to font sizes for other icon buttons
                        in the channel and group settings UI. */
                        font-size: calc(1.2 * var(--base-font-size-px));
                    }
                }

                .deactivated-user-group-icon {
                    font-size: var(--base-font-size-px);
                }
            }

            .large-icon {
                display: inline-block;
                margin-left: 5px;
                /* Square off the icon box for better alignment
                   with adjacent text. */
                line-height: 1;
                /* Middle alignment looks good for all but the lock icon. */
                vertical-align: middle;

                &:has(.zulip-icon-lock) {
                    /* Keep the default baseline alignment for the lock icon. */
                    vertical-align: baseline;
                }

                .zulip-icon {
                    font-size: 0.75em; /* 18px at 24px/em */
                }
            }
        }
    }
}
/* ... */

